workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta_Event__e/FavorecidoRemuneracaoProposta_Event__e.object-meta.xml
<CustomObject>
    <label>FavorecidoRemuneracaoProposta Event</label>
    <pluralLabel>FavorecidoRemuneracaoProposta Events</pluralLabel>
</CustomObject>