workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta_Event__e/fields/DadosCorretor__c.field-meta.xml
<CustomField>
    <fullName>DadosCorretor__c</fullName>
    <label>DadosCorretor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>