workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta_Event__e/fields/Participacao__c.field-meta.xml
<CustomField>
    <fullName>Participacao__c</fullName>
    <label>Participacao</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>