workspace-sf/force-app/main/default/objects/FavorecidoRemuneracaoProposta_Event__e/fields/RemuneracaoProposta__c.field-meta.xml
<CustomField>
    <fullName>RemuneracaoProposta__c</fullName>
    <label>RemuneracaoProposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>